# godot-mobile-midi

./: .gitignore  .gitmodules  CMakeLists.txt  android.checksum  android.cmake  build.android.sh  build.ios.sh  build.linux.sh  build.sh  download.sh  gmm-android.c  gmm-ios.c  gmm-linux.c  gmm.c  gmm.h  godot.checksum  ios.cmake  main.c
demo/: export_presets.cfg  main.gd  main.tscn  project.godot
demo/lib/: libgmm.gd  libgmm.gdnlib  libgmm.gdns  libgmm.tscn
